--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
           <div class="caption">
             <h3><%= link_to book.name, book_path(book) %></h3>
             <p><%= book.category %></p>
-            <p>$$$</p>
+            <p><%= humanized_money_with_symbol(book.price) %></p>
           </div>
         </div>
       </div>
