added-logo-and-avatar

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer" style="background-image: linear-gradient(white, transparent), url('<%= image_path 'addd image' %>')">
+<div class="footer" style="background-image: linear-gradient(white, transparent)">
   <div class="footer-links">
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
