--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-bookie">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-bookie-brand" do %>
-    <%= image_tag "logo.png", height: 50 %>
+    <%= image_tag "bookie_logo.png", height: 50 %>
   <% end %>
 
   <!-- Right Navigation -->
@@ -17,7 +17,7 @@
       <!-- Avatar with dropdown menu -->
       <div class="navbar-bookie-item">
         <div class="dropdown">
-          <%= image_tag "http://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbar-bookie-menu", "data-toggle" => "dropdown" %>
+          <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbar-bookie-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-bookie-dropdown-menu">
             <li>
               <%= link_to "#" do %>
