--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,8 +1,14 @@
-<h1>Purchase of teddy <%= @order.teddy_sku %></h1>
+<h1>Purchase of teddy <%= @order.book_sku %></h1>
 <%= form_tag order_payments_path(@order) do %>
   <article>
     <label class="amount">
-      <span>Amount: <%= humanized_money_with_symbol(@order.amount) %></span>
+      <span>Amount: <%= humanized_money_with_symbol(@order.amount_cents) %></span>
     </label>
   </article>
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+    data-name="My Book"
+    data-email="<%= current_user.email %>"
+    data-description="Book <%= @order.book_sku %>"
+    data-amount="<%= @order.amount_cents %>"></script>
 <% end %>
