--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,10 +5,12 @@
     <% @books.each do |book| %>
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
+          <div class="photo-index">
           <%= link_to image_tag(book.photo), book_path(book) %>
+          </div>
           <div class="caption">
             <h3><%= link_to book.name, book_path(book) %></h3>
-            <p><%= book.category %></p>
+            <p> Category: <%= book.category %></p>
             <p><%= humanized_money_with_symbol(book.price) %></p>
           </div>
         </div>
