--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,7 @@
       <%= link_to "Host", "#", class: "navbar-bookie-item navbar-bookie-link" %>
       <%= link_to "Trips", "#", class: "navbar-bookie-item navbar-bookie-link" %>
       <%= link_to "Messages", "#", class: "navbar-bookie-item navbar-bookie-link" %>
+      <%= link_to "Dashboard", dashboard_path, class: "navbar-bookie-item navbar-bookie-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-bookie-item">
