--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,7 @@
     <div class="col-sm-12 col-md-6">
       <p><%= @book.author %></p>
       <p><%= @book.description %></p>
-      <p><%= category: @book.category %></p>
+      <p>category: <%=  @book.category %></p>
       <p>Price: <%= humanized_money_with_symbol(@book.price) %></p>
     </div>
     <div class="col-sm-12 col-md-6">
