--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -1,10 +1,19 @@
 <div class="banner"  background-color: #9ACFE1;">
   <div class="banner-content">
-    <h1>BOOKIES</h1>
+    <h1><%= image_tag "bookie_logo.svg", height: 50, class:"logo_glow" %> BOOKIES</h1>
     <p>Inspire your kids with personalized stories</p>
     <a class="btn btn-primary btn-lg">See how!</a>
   </div>
   <div class ="swim_boy">
-  <%= image_tag "swim.png" %>
+    <%= image_tag "swim.png" %>
   </div>
+</div>
+
+<div class="intro"  background-color: white;">
+  <div class="banner-content">
+    <h1>BOOKIES</h1>
+    <p>Inspire your kids with personalized stories</p>
+    <a class="btn btn-primary btn-lg">See how!</a>
+  </div>
+
 </div>
