--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -9,11 +9,12 @@
   align-items: center;
   justify-content: center;
     h1 {
-    font-size: 60px;
-    font-weight: bold;
-    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-    font-family: 'Nunito', sans-serif;
-    filter: glow(color=#EEEE00,strength=3);
+    font-size: 70px;
+    font-weight: 100;
+    letter-spacing: 10px;
+    font-family: 'Montserrat', sans-serif, font;
+    text-shadow: 1px 1px 6px white;
+
   }
     p {
     font-size: 25px;
@@ -25,7 +26,7 @@
 
   }
 
-  .btn-lg, .btn-group-lg > .btn {
+  .btn {
     padding: 13px 23px;
     font-size: 18px;
     line-height: 1.3333333;
@@ -34,13 +35,30 @@
     border-color: white;
 
 }
+.btn:hover {
+  box-shadow: 1px 1px 8px white;
+}
+}
+
+.logo_glow {
+  box-shadow: 1px 1px 8px white;
 }
 
 .swim_boy{
-  position: fixed;
-  bottom: 5px;
-  right: 5px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
 
 
-
+.intro{
+  color: white;
+  background-color: white;
+  text-align: center;
+  height: 100vh;
+  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
