--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,9 +2,10 @@
   background-size: cover;
   color: white;
   height: 500px;
-  padding-top: 90px;
   display: flex;
   flex-direction: column;
+  padding-top: 453px;
+  padding-left: 20px;
 }
 
 .footer-links a {
@@ -13,6 +14,7 @@
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
+
 }
 
 .footer-links a:hover {
