--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,19 +2,23 @@
 <h1>This is the index page</h1>
 <div class="container">
   <div class="row">
-    <% @books.each do |book| %>
-      <div class="col-sm-6 col-md-3 ">
-        <div class="thumbnail">
-          <div class="photo-index">
-          <%= link_to image_tag(book.photo), book_path(book) %>
-          </div>
-          <div class="caption">
-            <h3><%= link_to book.name, book_path(book) %></h3>
-            <p> Category: <%= book.category %></p>
-            <p><%= humanized_money_with_symbol(book.price) %></p>
+    <% if @books.count == 0 %>
+
+    <% else %>
+      <% @books.each do |book| %>
+        <div class="col-sm-6 col-md-3 ">
+          <div class="thumbnail">
+            <div class="photo-index">
+            <%= link_to image_tag(book.photo), book_path(book) %>
+            </div>
+            <div class="caption">
+              <h3><%= link_to book.name, book_path(book) %></h3>
+              <p> Category: <%= book.category %></p>
+              <p><%= humanized_money_with_symbol(book.price) %></p>
+            </div>
           </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
