--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -62,3 +62,21 @@
   align-items: center;
   justify-content: center;
 }
+
+.form-control {
+  margin-bottom: 5%;
+  margin-top: -3%;
+  font-size: 18px;
+  border-radius: 8px;
+  text-align: center;
+  padding: 24px;
+  background-color: #82D0E2;
+  border-color: white;
+  width: 204px;
+}
+
+.input {
+  margin: auto;
+}
+
+
