--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -2,7 +2,15 @@
   <div class="banner-content">
     <h1><%= image_tag "bookie_logo.svg", height: 50, class:"logo_glow" %> BOOKIES</h1>
     <p>Inspire your kids with personalized stories</p>
-    <a class="btn btn-primary btn-lg">See how!</a>
+    <div class ="search-button">
+      <%= form_tag books_path, method: :get do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Enter Book Genre"
+      %>
+    <% end %>
+  </div>
   </div>
   <div class ="swim_boy">
     <%= image_tag "swim.png" %>
@@ -17,11 +25,4 @@
   </div>
 
 </div>
-  <%= form_tag books_path, method: :get do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "Find Book Genre"
-    %>
-  <% end %>
-<%= link_to "See all books", books_path, class:"btn btn-primary" %>
+
