--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -6,7 +6,8 @@
     <%= simple_form_for [@personalization, @review] do |f| %>
       <%= f.input :header, input_html: {class: 'form-control'}, label: false, placeholder: "header" %>
       <%= f.input :description, input_html: {class: 'form-control'}, label: false, placeholder: "content" %>
-      <%= f.input :stars, input_html: {class: 'form-control'}, label: false, placeholder: "stars" %>
+      <%= f.input :stars, collection: [[1, '1'] ,[2, '2'],[3, '3'],[4, '4'],[5, '5']] %>
+
   </div>
       <%= f.submit class: "btn btn-primary" %>
     <% end %>
