--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -39,7 +39,9 @@
             </div>
             <div class="review-description">
               <%= review.description %>
+            <div class="review-stars">
               <%= review.stars %>
+            </div>
             </div>
           </div>
         </div>
