--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
   <div style="margin-top:50px;margin-bottom:0">
     <div class="line"></div>
   </div>
-  <div class="row1">
+  <div class="row">
     <% @personalizations.each do |personalization| %>
       <% personalization.reviews.each do |review| %>
       <div class="col-md-12">
@@ -49,4 +49,5 @@
       <% end %>
     <% end %>
   </div>
+
 </div>
