--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -2,7 +2,9 @@
   color: white;
   background-color: #82D0E2;
   text-align: center;
-  height: 100vh;
+  height: calc(100vh - 70px);
+  position: relative;
+
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
@@ -51,14 +53,4 @@
 }
 
 
-.intro{
-  color: white;
-  background-color: white;
-  text-align: center;
-  height: 100vh;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: cover !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
