--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner"  background-color: #9ACFE1;">
   <div class="banner-content">
-    <h1><%= image_tag "bookie_logo.svg", height: 50, class:"logo_glow" %> BOOKIES</h1>
+    <h1><%= image_tag "bookie_logo.svg", height: 50 %> BOOKIES</h1>
     <p>Inspire your kids with personalized stories</p>
     <a class="btn btn-primary btn-lg">See how!</a>
   </div>
@@ -9,12 +9,44 @@
   </div>
 </div>
 
-<div class="intro"  background-color: white;">
-  <div class="banner-content">
-    <h1>BOOKIES</h1>
-    <p>Inspire your kids with personalized stories</p>
-    <a class="btn btn-primary btn-lg">See how!</a>
+<div class="intro" >
+  <div class="row">
+    <div class="col-xs-12 home-description">
+      <h1>Welcome to Bookies</h1>
+      <p>The funniest way to educate and share stunning personalized stories with your kids.</p>
+    </div>
   </div>
+  <div class="row">
+    <div class=" steps">
+      <div class="step_by_step">
+        <%= image_tag "icon1.png", class:"intro-icons" %>
+        <h1>Search for inspiration</h1>
+        <p>Select what kind of story you want to share with your kids.</p>
+      </div>
+      <div class="step_by_step">
+        <%= image_tag "icon2.png", class:"intro-icons" %>
+        <h1>Personalize your story</h1>
+        <p>Make the story personal and add some personal details to make it stunning!</p>
+      </div>
+      <div class="step_by_step last"  >
+        <%= image_tag "icon3.png", class:"intro-icons"  %>
+        <h1>Print it or download it</h1>
+        <p>Print an awesome book or download it straight to your ipad.</p>
+      </div>
+    </div>
+    <div class ="cloud">
+      <%= image_tag "cloud.png" %>
+    </div>
+  </div>
+</div>
+
+<div class="landing-bottom">
+ <div class="row">
+    <div class="col-xs-12 home-description">
+      <h1>Welcome to Bookies</h1>
+      <p>The funniest way to educate and share stunning personalized stories with your kids.</p>
+    </div>
 
 </div>
+
   <%= link_to "See all books", books_path, class:"btn btn-primary" %>
