--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -1,25 +1,33 @@
 
+
+
+.header {
+  margin: 70px 0px 70px 0px;
+}
+
+.single-card {
+  a {
+  text-decoration: none;
+  }
+}
+
+.thumbnail:hover {
+  box-shadow: 0 4px 10px rgba(0,0,0,0.25), 0 4px 4px rgba(0,0,0,0.22);
+  transition: 0.5s;
+}
+
 .thumbnail {
   display: block;
   background-color: #F4F4F4;
   border: 1px solid #ddd;
   padding: 0px;
   border-radius: 6px;
-  transition: border 0.2s ease-in-out;
-  height: 480px;
+  transition: border 0.3s ease-in-out;
+  height: 341px;
   margin-bottom: 60px;
+  margin-right: 5vh;
+  width: 96%;
 
-  a > img {
-    display: block;
-    max-width: 100%;
-    background-size: cover;
-    height: 350px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 6px 6px 0px 0px;
-    opacity: 0.9;
-    object-fit: cover;
-  }
 
   a {
     font-style: Montserrat;
@@ -32,9 +40,77 @@
 
     h3 {
     font-style: Montserrat;
-    font-size: 20px;
+    font-size: 19px;
     color: black;
     text-decoration: none;
+    margin-top: 0px;
+    padding-left: 5px;
     }
   }
+
+  p.name {
+    visibility: hidden;
+    position: absolute;
+    width: 86%;
+    top: 30%;
+    font-size: 25px;
+    font-family: 'Nunito', sans-serif;
+    padding: 11px;
+    text-align: center;
+    color: white;
+  }
+
+  &:hover p.name {
+    visibility: visible;
+    z-index: 9999;
+  }
+
+  &:hover .photo-index {
+   -webkit-filter: brightness(.45);
+   filter: brightness(.45);
+  }
 }
+
+
+.age-stars-price-index {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+
+  p {
+    font-family: 'Nunito', sans-serif;
+    font-size: 14px;
+  }
+}
+
+
+.photo-index {
+
+  display: block;
+  max-width: 100%;
+  background-size: cover;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 6px 6px 0px 0px;
+  opacity: 0.9;
+  object-fit: cover;
+  min-width: 100%;
+}
+
+
+
+
+// .book-name-index {
+//     text-align: center;
+//     visibility: hidden;
+//   }
+
+//   .thumbnail:hover .book-name-index {
+//   visibility: visible;
+//   opacity: 1;
+// }
+
+
+
+
