--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -66,7 +66,7 @@
   justify-content: center;
 }
 
-.form-control {
+.search-form {
   font-size: 18px;
   border-radius: 8px;
   text-align: center;
