--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -6,7 +6,7 @@
       <%= form_tag books_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
-        class: "form-control",
+        class: "search-form form-control",
         placeholder: "Enter Book Genre"
       %>
     <% end %>
