--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -2,51 +2,14 @@
   border-bottom: 1px solid #DBDBDB !important;
 }
 
-
-//css code for rating
-.txt-center {
-  text-align: center;
-}
-.hide {
-  display: none;
+.reviews {
+  display:flex;
 }
 
-.clear {
-  float: none;
-  clear: both;
+.reviews-left {
+  margin-right: 90px;
 }
 
-.rating {
-    width: 100px;
-    unicode-bidi: bidi-override;
-    direction: rtl;
-    text-align: center;
-    position: relative;
-}
-
-.rating > label {
-    float: right;
-    display: inline;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    width: 1.1em;
-    cursor: pointer;
-    color: #000;
-}
-
-.rating > label:hover,
-.rating > label:hover ~ label,
-.rating > input.radio-btn:checked ~ label {
-    color: transparent;
-}
-
-.rating > label:hover:before,
-.rating > label:hover ~ label:before,
-.rating > input.radio-btn:checked ~ label:before,
-.rating > input.radio-btn:checked ~ label:before {
-    content: "\2605";
-    position: absolute;
-    left: 0;
-    color: #FFD700;
+.review-header {
+  font-weight: bold;
 }
