--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,29 +22,34 @@
       <% end %>
     </div>
   </div>
-  <div style="margin-top:50px;margin-bottom:0">
+
+
+  <div style="margin-top:50px;margin-bottom:10px">
     <div class="line"></div>
   </div>
-  <div class="row">
+  <div>
     <% @personalizations.each do |personalization| %>
       <% personalization.reviews.each do |review| %>
-      <div class="col-md-12">
-        <div class="card-rating">
-          <div class="reviews">
+        <div class="reviews">
+          <div class="reviews-left">
+            <div class="review-stars">
+              <%= select_tag "stars", options_for_select((0..5).to_a, review.stars), class: "review-stars-select" %>
+            </div>
             <div class="review-user">
               <%= personalization.user.first_name %>
             </div>
+          </div>
+          <div class="review-right">
             <div class="review-header">
               <%= review.header %>
             </div>
             <div class="review-description">
               <%= review.description %>
-            <div class="review-stars">
-              <%= select_tag "stars", options_for_select((0..5).to_a, review.stars), class: "review-stars-select" %>
-            </div>
             </div>
           </div>
         </div>
+      <div style="margin-top:50px;margin-bottom:10px">
+        <div class="line"></div>
       </div>
       <% end %>
     <% end %>
