--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -18,15 +18,14 @@
 
 .thumbnail {
   display: block;
-  background-color: #F4F4F4;
-  border: 1px solid #ddd;
+  background-color: white;
+  border: none;
   padding: 0px;
   border-radius: 6px;
   transition: border 0.3s ease-in-out;
   height: 341px;
   margin-bottom: 60px;
-  margin-right: 5vh;
-  width: 96%;
+  width: 100%;
 
 
   a {
@@ -37,6 +36,7 @@
 
   .caption {
     padding: 5px;
+
 
     h3 {
     font-style: Montserrat;
