--- a/app/assets/stylesheets/components/_carrousel.scss
+++ b/app/assets/stylesheets/components/_carrousel.scss
@@ -6,7 +6,6 @@
     overflow-x: hidden;
     height: 28em;
     width: 65em;
-    top: 9vh;
     margin: auto;
 }
 
@@ -22,8 +21,8 @@
   z-index: -1;
   font-family: sans-serif;
   line-height: 20em;
-  width: 12em;
-  height: 19em;
+  width: 10em;
+  height: 17em;
   //filter: brightness(60%);
  // background: rgba(0,0,0,0.8);
   background-image: url("cocktail.jpg");
@@ -68,7 +67,7 @@
   // position: absolute;
   // top: 0;
   cursor: pointer;
-  background: rgba(255,255,255,0.1);
+  // background: rgba(255,255,255,0.1);
   padding: 0 2em;
   line-height: 500px;
   transition: background 0.3s ease;
@@ -84,7 +83,7 @@
     left: 0;
   }
   &:hover {
-    background: rgba(255,255,255,0.2);
+    // background: rgba(255,255,255,0.2);
   }
 }
 .boat-name{
