--- a/app/views/shared/_carrousel.html.erb
+++ b/app/views/shared/_carrousel.html.erb
@@ -1,1 +1,26 @@
 
+<div class="carrousel-wrapper">
+  <div class="carrousel-btn prev">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+      <path d="M14 20c0.128 0 0.256-0.049 0.354-0.146 0.195-0.195 0.195-0.512 0-0.707l-8.646-8.646 8.646-8.646c0.195-0.195 0.195-0.512 0-0.707s-0.512-0.195-0.707 0l-9 9c-0.195 0.195-0.195 0.512 0 0.707l9 9c0.098 0.098 0.226 0.146 0.354 0.146z"></path>
+    </svg>
+  </div>
+  <div class="carrousel-container">
+    <div class="inner">
+      <% books.each do |book| %>
+        <%= link_to book_path(book) do %>
+          <div class="card-caroussel" style="background-image: url('<%= image_path book.photo, height: 300, width: 400, crop: :fill %>')">
+            <div class="book-name">
+              <p><%= book.name %></p>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+  <div class="carrousel-btn next">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+      <path d="M5 20c-0.128 0-0.256-0.049-0.354-0.146-0.195-0.195-0.195-0.512 0-0.707l8.646-8.646-8.646-8.646c-0.195-0.195-0.195-0.512 0-0.707s0.512-0.195 0.707 0l9 9c0.195 0.195 0.195 0.512 0 0.707l-9 9c-0.098 0.098-0.226 0.146-0.354 0.146z"></path>
+    </svg>
+  </div>
+</div>
