--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,23 +1,26 @@
 .footer {
-  background-size: cover;
-  color: white;
-  height: 500px;
+  background: white;
   display: flex;
-  flex-direction: column;
-  padding-top: 453px;
-  padding-left: 20px;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
 }
-
+.footer-links {
+  display: flex;
+  align-items: center;
+}
 .footer-links a {
   color: black;
-  opacity: 0.25;
+  opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
-
 }
-
 .footer-links a:hover {
   opacity: 1;
 }
-
+.footer .fa-heart {
+  color: #D23333;
+}
