--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,11 @@
-<div class="footer" style="background-image: linear-gradient(white, transparent)">
+
+<div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="www.instagram.com"><i class="fa fa-instagram"></i></a>
+    <a href="www.facebook.com"><i class="fa fa-facebook"></i></a>
+    <a href="www.twitter.com"><i class="fa fa-twitter"></i></a>
+  </div>
+  <div class="footer-copyright">
+    Help your child develop through customised stories made with <i class="fa fa-heart"></i>
   </div>
 </div>
