--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="wrapper">
+<div class="container">
   <div class="book-row">
     <div class="col-sm-12 col-md-6 photo-show">
       <%= image_tag(@book.photo, width: '100%') %>
@@ -16,13 +16,16 @@
       </div>
     </div>
     <div class="col-sm-12 col-md-6">
-      <%= form_tag book_personalizations_path(@book)do %>
+      <%= form_tag book_personalizations_path(@book) do %>
         <%= hidden_field_tag 'book_id', @book.id %>
         <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
 
+</div>
+
+<div class="container">
 
 
   <div style="margin-top:50px;margin-bottom:10px">
@@ -55,5 +58,26 @@
       <% end %>
     <% end %>
   </div>
-
 </div>
+<div class="container">
+  <%= simple_form_for [@book, @personalization] do |f| %>
+   <% if @personalization.errors.any? %>
+  <div class="errors-container">
+    <ul>
+      <% @personalization.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.input :character_name, input_html: {class: 'form-control'}, label: false, placeholder: "name" %>
+    <%= f.input :character_age, input_html: {class: 'form-control'}, label: false, placeholder: "age" %>
+    <%= f.input :character_gender, input_html: {class: 'form-control'}, label: false, placeholder: "gender" %>
+    <%= f.submit class: 'btn btn-primary' %>
+  </div>
+  <% end %>
+  <div class="btn btn-primary">Preview your book</div>
+</div>
+
