--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -1,11 +1,12 @@
-<h1> Preview Book </h1>
-<h2>Timmy's Story</h2>
-  <div class="book">
+<h1> Timmy's Story Preview</h1>
+<div class="book-container">
+  <div class="flipper">
       <div class="current left page red ontop">1</div>
       <div class="current right page blue ontop">2</div>
   </div>
-
+</div>
   <div class="btns">
       <button class="prev"> < </button>
       <button class="next"> > </button>
   </div>
+
