--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -68,7 +68,10 @@
       <%= f.submit class: 'btn btn-primary' %>
     </div>
   <% end %>
-  <div class="btn btn-primary">Preview your book</div>
-
+  <% if @personalization.id.nil? %>
+    <%= link_to "Preview your book", book_path{@book} %>
+  <% else %>
+  <%= link_to "Preview your book", personalization_path(@personalization) %>
+  <% end %>
 </div>
 
