--- a/app/assets/stylesheets/components/_flipper.scss
+++ b/app/assets/stylesheets/components/_flipper.scss
@@ -1,6 +1,6 @@
 .flipper{
-  width:600px;
-  height:400px;
+  width:700px;
+  height:500px;
   position:relative;
   perspective:1500px;
 }
@@ -8,6 +8,7 @@
 .book-container {
   display: flex;
   justify-content: center;
+  margin-top: 32px;
 }
 .flipper .page{
   position:absolute;
@@ -19,6 +20,7 @@
   transform-style: preserve-3d;
   transform:rotateY(0deg);
   backface-visibility:hidden;z-index:1;
+  border-radius: 2px;
 }
 .flipper .page.left{
   left:0;
@@ -82,11 +84,17 @@
 }
 
 .btns{
-  text-align:center;
-  margin:20px 0;
+    opacity: 0;
+    text-align: center;
+    position: absolute;
+    z-index: 100;
+    height: 140px;
+    margin: 20px 0;
 }
 .btns button{
+  height: 460px;
   font-size: 20px;
-  margin:0 10px;
-  padding:10px 30px;
+  width: 320px;
+  margin: 0 10px;
+  padding: 10px 30px;
 }
