designed navbar, show, footer

--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -29,7 +29,7 @@
 
 
   a {
-    font-style: Montserrat;
+    font-style: "Montserrat";
     color: black;
     text-decoration: none;
   }
@@ -79,7 +79,8 @@
 
   p {
     font-family: 'Nunito', sans-serif;
-    font-size: 14px;
+    font-size: 17px;
+    font-weight: lighter;
   }
 }
 
