--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,7 +4,7 @@
 // Define fonts for body and headers
 $body-font: 'Nunito', sans-serif;
 
-$headers-font: 'Quicksand', sans-serif;
+$headers-font: 'Montserrat', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
