--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,10 +5,9 @@
       <div class="photo-show" style="background-image:url(<%= image_path(@book.photo)%>)"></div>
       <div class="col-sm-12 col-md-12 author-show">
         <div class="list-facts">
-          <p><i class="fas fa-search"></i> <%=  @book.category %></p>
-          <p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p>
-          <p><i class="fas fa-child"></i> <%=  @book.age %></p>
-          <p><i class="fas fa-star"></i> <%= %>Stars</p>
+          <div><p><i class="fas fa-search"></i> <%=  @book.category %></p></div>
+          <div><p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p></div>
+          <div><p><i class="fas fa-child"></i> <%=  @book.age %></p></div>
         </div>
         <h2><%= @book.name %></h2>
         <h3>... written by <%= @book.author %></h3>
