--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,16 @@
 /* Main navbar */
 .navbar-bookie {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: #9ACFE1;
+  background: #82D0E2;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
+  width: 100%;
+  top: 0;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  z-index: 9999;
 }
 
 /* Logo */
@@ -27,6 +30,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  a {
+    color: white;
+    font-weight: lighter;
+    font-family: 'Nunito', sans-serif;
+    font-size: 19px;
+  }
+
+  a:hover {
+    border-bottom: 3px solid white;
+    padding-bottom: 3px;
+    color: white;
+  }
 }
 
 /* Basic navbar item */
