--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner"  background-color: #9ACFE1;">
   <div class="banner-content">
-    <h1><%= image_tag "bookie_logo.svg", height: 50 %> BOOKIES</h1>
+    <h1><%= image_tag "bookie_logo.svg", height: 50 %> BOOKIDS</h1>
     <p>Inspire your kids with personalized stories</p>
     <div class ="search-button">
       <%= form_tag books_path, method: :get do %>
