--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,6 +6,6 @@
     <a href="www.twitter.com"><i class="fa fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
-    Help your child develop through customised stories made with <i class="fa fa-heart"></i>
+    <p> Help your child develop through customised stories</p>
   </div>
 </div>
