--- a/app/assets/stylesheets/components/_carrousel.scss
+++ b/app/assets/stylesheets/components/_carrousel.scss
@@ -27,7 +27,7 @@
  // background: rgba(0,0,0,0.8);
   background-image: url("cocktail.jpg");
   background-size: cover;
-  color: black;
+  color: white;
   border-radius: 6px;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.3), 0 1px 0 0 rgba(0, 0, 0, 0.03);
   display: inline-block;
@@ -37,9 +37,9 @@
   transition: transform 0.3s ease, background 0.2s ease, box-shadow 0.2s ease;
   &:hover {
     //filter: brightness(90%);
-    opacity: 0.8;
-    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.3), 0 1px 0 0 rgba(0, 0, 0, 0.03);
-  }
+    -webkit-filter: brightness(.45);
+   filter: brightness(.45);
+ }
 }
 .cocktail-name {
   filter: brightness(90%);
@@ -86,9 +86,10 @@
     // background: rgba(255,255,255,0.2);
   }
 }
-.boat-name{
+.book-name{
+  p {
+
   color: white;
   font-family: montserrat;
-  text-shadow: 2px 2px 4px #1E1E1E;
-
+  }
 }
