--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -51,14 +51,19 @@
 <div class="landing-bottom">
  <div class="row">
     <div class="col-xs-12 home-description">
-      <h1>Welcome to Bookies</h1>
-      <p>The funniest way to educate and share stunning personalized stories with your kids.</p>
+        <h1>Welcome to Bookies</h1>
+        <p>The funniest way to educate and share stunning personalized stories with your kids.</p>
+        </div>
+        <div class = "carrousel_filter">
+          <%= link_to "sleep", filtered_books_path(category: "sleep"), class: "btn-carrousel", remote: true %>
+          <%= link_to "sports", filtered_books_path(category: "sports"), class: "btn-carrousel", remote: true %>
+          <%= link_to "friends", filtered_books_path(category: "friends"), class: "btn-carrousel", remote: true %>
+          <%= link_to "food", filtered_books_path(category: "food"), class: "btn-carrousel", remote: true %>
+        </div>
+        <p>.</p>
+      <div id="main-carrousel">
+        <%= render 'shared/carrousel', books: @books %>
+      </div>
     </div>
-    <p>.</p>
-      <%= render 'shared/carrousel', books: @books %>
-    </div>
-
 </div>
-
-<%= link_to "See all books", books_path, class:"btn btn-primary" %>
-
+<%= javascript_pack_tag 'carrousel' %>
