--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Timmy's Story Preview</h1>
+<h1 class="preview-title"> Timmy's Story Preview</h1>
 <div class="book-container">
   <div class="btns">
       <button class="prev"></button>
