--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -18,15 +18,15 @@
     text-shadow: 1px 1px 6px white;
 
   }
-    p {
-    font-size: 25px;
-    font-weight: lighter;
-    color: rgb(255, 255, 255);
-    opacity: 0.9;
-    margin-bottom: 30px;
-    font-family: 'Nunito', sans-serif;
+  //   p {
+  //   font-size: 25px;
+  //   font-weight: lighter;
+  //   color: rgb(255, 255, 255);
+  //   opacity: 0.9;
+  //   margin-bottom: 30px;
+  //   font-family: 'Nunito', sans-serif;
 
-  }
+  // }
 
   .btn {
     padding: 13px 23px;
