--- a/app/views/shared/_carrousel.html.erb
+++ b/app/views/shared/_carrousel.html.erb
@@ -10,9 +10,7 @@
       <% books.each do |book| %>
         <%= link_to book_path(book) do %>
           <div class="card-caroussel" style="background-image: url('<%= image_path book.photo, height: 300, width: 400, crop: :fill %>')">
-            <div class="book-name">
-              <p><%= book.name %></p>
-            </div>
+              <p class="name-carrousel"><%= book.name %></p>
           </div>
         <% end %>
       <% end %>
