--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,14 +1,15 @@
-<h1>Purchase of books <%= @personalization.book_sku %></h1>
-<%= form_tag order_payments_path(@personalization) do %>
+<h1>Purchase of books <%= @order.personalization_sku %></h1>
+<%= form_tag order_payments_path(@order) do %>
   <article>
     <label class="amount">
-      <span>Amount: <%= humanized_money_with_symbol(@personalization.amount) %></span>
+      <span>Amount: <%= humanized_money_with_symbol(@order.amount) %></span>
     </label>
   </article>
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
     data-name="My Book"
     data-email="<%= current_user.email %>"
-    data-description="Book <%= @personalization.book_sku %>"
-    data-amount="<%= @personalization.amount_cents %>"></script>
+    data-description="Book <%= @order.personalization_sku %>"
+    data-amount="<%= @order.amount_cents %>"
+    data-currency="<%= @order.amount.currency %>"></script>
 <% end %>
