fixed-flipbook-js

--- a/app/assets/stylesheets/components/_flipper.scss
+++ b/app/assets/stylesheets/components/_flipper.scss
@@ -15,7 +15,8 @@
   top:0;width:50%;
   height:100%;
   color:#fff;
-  font-size:80px;
+  font-size:40px;
+  text-align: center;
   transition:all .8s ease;
   transform-style: preserve-3d;
   transform:rotateY(0deg);
