--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -5,13 +5,21 @@
       <button class="next"></button>
   </div>
   <div class="flipper">
-      <div class="current left page red ontop">1</div>
-      <div class="current right page blue ontop">2</div>
+      <div class="current left page <%= @dataset_flipper[0][:color] %> ontop"><%= @dataset_flipper[0][:content] %></div>
+      <div class="current right page <%= @dataset_flipper[1][:color] %> ontop"><%= @dataset_flipper[1][:content] %></div>
   </div>
 </div>
 
 
-<div>
- <%= @content_with_name%>
+<div class="customized-pages1">
+<!--  <%= @content_with_name%> -->
+
+ <%= content_tag :div,
+  nil,
+  id: 'data-flipper',
+  data: { pages: @dataset_flipper} %>
 </div>
+
+
+
 
