worked on dashboard

--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -100,8 +100,10 @@
 }
 
 
+.row-index {
+  margin-top: 200px;
 
-
+}
 // .book-name-index {
 //     text-align: center;
 //     visibility: hidden;
