created show card, bookmark positioning missing

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,20 +1,27 @@
-
 <div class="wrapper">
-  <div class="row">
-    <div class="col-sm-12 col-md-5 single-card-show">
-      <div class="photo-show" style="background-image:url(<%= image_path(@book.photo)%>)"></div>
-      <div class="col-sm-12 col-md-12 author-show">
-        <div class="list-facts">
-          <div><p><i class="fas fa-search"></i> <%=  @book.category %></p></div>
-          <div><p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p></div>
-          <div><p><i class="fas fa-child"></i> <%=  @book.age %></p></div>
+  <div class="show-card">
+    <div class="photo-row">
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 book-photo">
+        <%= image_tag(@book.photo, width: '100%') %>
+      </div>
+      <div class="col-sm-12 col-md-6 author-show">
+        <div class="bookmark">
+          <i class="fas fa-bookmark"></i>
         </div>
-        <h2><%= @book.name %></h2>
-        <h3>... written by <%= @book.author %></h3>
-        <p><%= @book.description %></p>
+        <div class="list-facts">
+          <p><i class="fas fa-search"></i> <%=  @book.category %></p>
+          <p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p>
+          <p><i class="fas fa-child"></i> <%=  @book.age %></p>
+        </div>
+          <h2><%= @book.name %></h2>
+          <h3>... written by <%= @book.author %></h3>
+          <p><%= @book.description %></p>
       </div>
     </div>
   </div>
+
 
   <div style="margin-top:50px;margin-bottom:10px">
     <div class="line"></div>
