--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -2,7 +2,18 @@
 
 
 .header {
-  margin: 70px 0px 70px 0px;
+  margin: 90px 15% 100px 15%;
+  // background-color: #F0BD68;
+  border-radius: 6px;
+  border: 2px dotted #F0BD68;
+  padding: 10px 10px 20px;
+  text-align: center;
+
+  h2 {
+    font-weight: lighter;
+    font-size: 20px;
+    line-height: 1.8;
+  }
 }
 
 .single-card {
@@ -103,7 +114,7 @@
 
 
 .row-index {
-  margin-top: 200px;
+  margin-top: 100px;
 
 }
 // .book-name-index {
