--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6 book-photo">
-        <%= image_tag(@book.photo, width: '100%') %>
+        <%= image_tag(@book.photo, width: '100%', height: '100%') %>
       </div>
       <div class="col-sm-12 col-md-6 author-show">
         <div class="bookmark">
