--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -1,4 +1,12 @@
-<h1 class="preview-title"> Timmy's Story Preview</h1>
+<div class="flipper-title">
+  <h1 class="preview-title"> Timmy's Story Preview</h1>
+    <div class="payment-button">
+      <%= form_tag orders_path do %>
+        <%= hidden_field_tag 'personalization_id', @personalization.id %>
+        <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+</div>
 <div class="book-container">
   <div class="btns">
       <button class="prev"></button>
@@ -21,9 +29,6 @@
 </div>
 
 <!-- payment form -->
-<%= form_tag orders_path do %>
-  <%= hidden_field_tag 'personalization_id', @personalization.id %>
-  <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
-<% end %>
+
 
 
