--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,6 +1,12 @@
-.book-row {
-  margin-top: 10%;
-  border: none;
+.show-card {
+  background-color: white;
+  margin-top: 150px;
+  box-shadow: 0 4px 7px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
+  border-radius: 6px;
+}
+
+.book-photo img {
+  border-radius: 6px 0px 0px 6px;
 }
 
 .list-facts {
@@ -13,7 +19,7 @@
   padding-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
   margin-top: 7%;
 
   .fas {
@@ -29,9 +35,25 @@
   }
 }
 
+.bookmark {
+  .fas{
+  position: absolute;
+  font-size: 60px;
+  top: 0;
+  right: 100px;
+  color: #F0BD68;
+  }
+}
+
+.description-show {
+  margin-top: 23%;
+}
+
 .author-show {
   padding-left: 35px;
   padding-right: 35px;
+  position: relative;
+
 
   h2{
     padding-bottom: 1px;
@@ -53,44 +75,4 @@
   h3 h2 p {
     font-family: 'Nunito', sans-serif;
   }
-}
-
-
-// .thumbnail-show:hover {
-//   box-shadow: 0 4px 7px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
-//   transition: 0.2s;
-// }
-
-.single-card-show {
-  margin-top: 140px;
-  display: block;
-  background-color: white;
-  border: none;
-  padding: 0px;
-  border-radius: 6px;
-  transition: border 0.3s ease-in-out;
-  // height: 120vh;
-  margin-bottom: 50px;
-  box-shadow: 0 4px 7px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
-
-a {
-    font-style: Montserrat;
-    color: black;
-    text-decoration: none;
-  }
-}
-
-
-.photo-show {
-
-  display: block;
-  max-width: 100%;
-  background-size: cover;
-  height: 550px;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 6px 6px 0px 0px;
-  opacity: 0.9;
-  object-fit: cover;
-  min-width: 100%;
 }
