--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -1,5 +1,5 @@
 <div class="flipper-title">
-  <h1 class="preview-title"> Timmy's Story Preview</h1>
+  <h1 class="preview-title"> Your Story Preview</h1>
 </div>
 <div class="book-container">
   <div class="btns">
