--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -7,10 +7,20 @@
       <button class="next"></button>
   </div>
   <div class="flipper">
-      <div class="current left page <%= @dataset_flipper[0][:color] %> ontop"><%= @dataset_flipper[0][:content] %>
+      <div class="current left page <%= @dataset_flipper[0][:color] %> ontop">
+        <% if @dataset_flipper[0][:image] %>
+          <img src="<%= @dataset_flipper[0][:image] %>" alt="">
+        <% else %>
+          <%= @dataset_flipper[0][:content] %>
+        <% end %>
       </div>
       <div class="shadow-left"></div>
-      <div class="current right page <%= @dataset_flipper[1][:color] %> ontop"><%= @dataset_flipper[1][:content] %>
+      <div class="current right page <%= @dataset_flipper[1][:color] %> ontop">
+        <% if @dataset_flipper[1][:image] %>
+          <img src="<%= @dataset_flipper[1][:image] %>" alt="">
+        <% else %>
+          <%= @dataset_flipper[1][:content] %>
+        <% end %>
       </div>
         <div class="shadow-right"></div>
   </div>
