--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -7,9 +7,10 @@
   background-color: white;
   margin-bottom: 10%;
   box-shadow: 0 4px 7px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
+}
 
-
-
+.amount{
+  margin-bottom: -6px;
 }
 
 .description-checkout {
@@ -19,7 +20,12 @@
 
 
 .price-delivery-checkout {
-  text-align: center;
+  margin-bottom: 40px;
+  margin-top: 40px;
+
+  p {
+    padding-bottom: 1px;
+  }
 }
 
 .book-photo-checkout {
