fixed button and capitalization

--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -2,7 +2,7 @@
 
 
 .header {
-  margin: 90px 15% 100px 15%;
+  margin: 1% 15% 5% 15%;
   // background-color: #F0BD68;
   text-align: center;
 
@@ -112,6 +112,9 @@
   min-width: 100%;
 }
 
+.search-results {
+
+}
 
 .row-index {
   margin-top: 100px;
