--- a/app/assets/stylesheets/components/_flipper.scss
+++ b/app/assets/stylesheets/components/_flipper.scss
@@ -50,6 +50,7 @@
 
 .preview-title {
   margin-top: 80px;
+  font-family: 'Muli', sans-serif;
 }
 .book-container {
   display: flex;
@@ -60,8 +61,8 @@
   position:absolute;
   top:0;width:50%;
   height:100%;
-  color:#fff;
-  font-size:20px;
+  color: black;
+  font-size:14px;
   text-align: center;
   transition:all .8s ease;
   transform-style: preserve-3d;
@@ -162,3 +163,13 @@
   padding: 10px 30px;
 }
 
+.btn.btn-primary.purchase {
+  color: white;
+  background-color: #F0BD68;
+  border-color: #F0BD68;
+} .btn.btn-primary.purchase:hover {
+  color: #F0BD68;
+  background-color: white;
+  border-color: #F0BD68;
+
+}
