--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -43,5 +43,5 @@
     <%= submit_tag 'Purchase', class: 'btn btn-primary purchase' %>
   <% end %>
 </div>
-
+<%= javascript_pack_tag 'flipper' %>
 
